# agenthack-wankel-os

./: .env.example  .gitignore  .replit  README.md  bridge_client.py  dartrix_core.py  haccp_layer.py  index.html  main.py  package.json  peklownia.py  pyproject.toml  replit.md  requirements.txt  server.py  visualization_core.py
agro_organism_00/: main.py
config/: peklownia_config.yaml
leon/: curing_agent.py  wankel_agent.py
leon/src/leon/: aviation_haccp.py  peklownia.py
scada_docs/: aviation_haccp.py  document_automator.py
uipath-adapter/: maestro_bridge.py
